<resources>
    <string name="app_name">ClaudiaGaleraViewModel</string>
   <string name="address">Address</string>
    <string name="user">USER</string>
    <string name="name">Name</string>
    <string name="agregar">+</string>
    <string name="eliminar">-</string>
    <string name="actualizar">⟳</string>
    <string name="agregar2">Agregar</string>
    <string name="ir">IR</string>
    <string name="username">Username</string>
    <string name="email">Email\n</string>
    <string name="phone">Phone\n</string>
 <string name="users">Users</string>
 <string name="albums">Albums</string>
 <string name="todos">Todos</string>
 <string name="posts">Posts</string>
 <string name="comments">Comments</string>
 <string name="album_title">Title</string>
 <string name="album_thumbnail_desc">Photo\n\n</string>
 <string name="album_url">Url\n</string>
 <string name="album_description">Description\n</string>
    <string name="nombre_del_autor">Nombre del autor</string>
 <string name="email_del_autor">Email del autor</string>
 <string name="texto_del_comentario">Texto del comentario</string>
    <string name="userid">userId</string>
 <string name="login">Login</string>
    <string name="photo">Photo</string>
 <string name="photo_title">Photo Title</string>
 <string name="title">Title</string>
 <string name="body">Body</string>
 <string name="t_tulo_de_la_tarea">Título de la tarea</string>
 <string name="estado_completado">Estado: Completado</string>
    <string name="add">+</string>
    <string name="login_title">Login</string>
    <string name="poststitle">Posts</string>
    <string name="comment_title">comment title</string>
    <string name="top_app_bar">Top App Bar</string>
    <string name="bot_n_de_inicio">Botón de inicio</string>
    <string name="boton">BOTON</string>
    <string name="buscar">Buscar</string>
    <string name="search">SEARCH</string>
    <string name="password">Password</string>
    <string name="registro">Registro</string>
</resources>