<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/detalle_fragment"
    android:layout_height="match_parent"
    tools:context=".ui.pantalladetalle.fragments.DetalleFragmentUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_general"
        android:weightSum="1">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

</FrameLayout>
