<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.pantalladetalle.fragments.DetalleFragmentComment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="8dp"
            android:text="@string/nombre_del_autor" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="8dp"
            android:text="@string/email_del_autor" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/comment_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="4dp"
            android:text="@string/texto_del_comentario" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addCommentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_marginEnd="16dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateCommentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actualizar"
                android:layout_marginEnd="16dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteCommentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eliminar"
                app:iconGravity="textStart"
                app:iconPadding="8dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
