<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.photo.detalle.DetalleFragmentPhoto">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/photo_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/photo_title"
        android:padding="8dp"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/photo"
        android:padding="8dp"
        android:scaleType="fitCenter" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deletePhotoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/eliminar"
        android:textColor="#FFFFFF"
        app:cornerRadius="8dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp" />

</LinearLayout>
